# pleco

./: .gitignore  README.md  pyproject.toml
docs/: api.rst  conf.py  expectations.rst  index.rst
docs/_ext/: impl_icon.py
docs/expectations/: expect_column_kl_divergence.rst  expect_column_max.rst  expect_column_mean.rst  expect_column_median.rst  expect_column_min.rst  expect_column_mode.rst  expect_column_proportion_of_unique_values.rst  expect_column_quantile.rst  expect_column_standard_deviation.rst  expect_column_sum.rst  expect_column_unique_value_count.rst  expect_column_value_lengths_to_be_between.rst  expect_column_value_lengths_to_equal.rst  expect_column_value_z_scores_to_be_between.rst  expect_column_values_to_be_between.rst  expect_column_values_to_be_decreasing.rst  expect_column_values_to_be_in_set.rst  expect_column_values_to_be_in_type_set.rst  expect_column_values_to_be_increasing.rst  expect_column_values_to_be_json_parseable.rst  expect_column_values_to_be_null.rst  expect_column_values_to_be_of_type.rst  expect_column_values_to_be_unique.rst  expect_column_values_to_contain_set.rst  expect_column_values_to_equal_set.rst  expect_column_values_to_match_json_schema.rst  expect_column_values_to_match_like_pattern.rst  expect_column_values_to_match_like_pattern_set.rst  expect_column_values_to_match_regex.rst  expect_column_values_to_match_regex_set.rst  expect_column_values_to_match_strftime_format.rst  expect_column_values_to_not_be_in_set.rst  expect_column_values_to_not_be_null.rst  expect_column_values_to_not_match_like_pattern.rst  (+3 more)
(+10 files in other folders)
