[project]
name = "pleco"
version = "0.0.0"
description = "Straightforward data validation"
readme = "README.md"
license = "MIT"
authors = [
    { name = "James Hale", email = "james+pleco@hale.zip" }
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.10.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "sphinx>=7.4.7",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-rtd-theme>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["E", "I", "RUF022"]

[tool.uv.workspace]
members = ["packages/pleco-pandas"]
